--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "nikkilr88",
+      "name": "Nicole Sattler",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/24983331?v=4",
+      "profile": "http://devnikki.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7
